// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render add to My list button with isFavorite status 1`] = `
<button
  className="btn btn--list movie-card__button"
  onClick={[Function]}
  type="button"
>
  <svg
    height="14"
    viewBox="0 0 18 14"
    width="18"
  >
    <use
      xlinkHref="/sprite.svg#in-list"
    />
  </svg>
  <span>
    My list
  </span>
</button>
`;

exports[`Render add to My list button without isFavorite status 1`] = `
<button
  className="btn btn--list movie-card__button"
  onClick={[Function]}
  type="button"
>
  <svg
    height="20"
    viewBox="0 0 19 20"
    width="19"
  >
    <use
      xlinkHref="/sprite.svg#add"
    />
  </svg>
  <span>
    My list
  </span>
</button>
`;
